load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//bazel:cc_defs.bzl", "heyp_cc_binary")

cc_library(
    name = "data",
    srcs = ["data.cc"],
    hdrs = ["data.h"],
    visibility = [
        "//heyp/host-agent:__subpackages__",
    ],
    deps = [
        "//heyp/log",
        "//third_party/simdjson",
        "@boost//:process",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_library(
    name = "enforcer",
    srcs = ["enforcer.cc"],
    hdrs = ["enforcer.h"],
    visibility = [
        "//heyp/host-agent:__subpackages__",
        "//heyp/integration:__subpackages__",
    ],
    deps = [
        ":iptables-controller",
        ":tc-caller",
        "//heyp/flows:dc-mapper",
        "//heyp/host-agent:enforcer",
        "//heyp/host-agent:simulated-wan-db",
        "//heyp/io:debug-output-logger",
        "//heyp/log",
        "@com_google_absl//absl/cleanup",
        "@com_google_absl//absl/functional:function_ref",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "iptables",
    srcs = ["iptables.cc"],
    hdrs = ["iptables.h"],
    deps = [
        "//heyp/log",
        "@boost//:process",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
    ],
)

cc_library(
    name = "iptables-controller",
    srcs = ["iptables-controller.cc"],
    hdrs = ["iptables-controller.h"],
    deps = [
        ":iptables",
        "//heyp/log",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_library(
    name = "tc-caller",
    srcs = ["tc-caller.cc"],
    hdrs = ["tc-caller.h"],
    deps = [
        "//heyp/log",
        "//third_party/simdjson",
        "@boost//:process",
        "@com_google_absl//absl/status",
    ],
)

heyp_cc_binary(
    name = "fake-ip-addr-for-test",
    testonly = 1,
    srcs = ["fake-ip-addr-for-test.c"],
)

cc_test(
    name = "data-test",
    srcs = ["data-test.cc"],
    data = [
        ":fake-ip-addr-for-test",
    ],
    deps = [
        ":data",
        "//heyp/init:test-main",
    ],
)

cc_test(
    name = "enforcer-test",
    srcs = ["enforcer-test.cc"],
    deps = [
        ":enforcer",
        "//heyp/init:test-main",
        "//heyp/proto:parse-text",
    ],
)

cc_test(
    name = "iptables-controller-test",
    srcs = ["iptables-controller-test.cc"],
    deps = [
        ":iptables-controller",
        "//heyp/init:test-main",
    ],
)

heyp_cc_binary(
    name = "fake-iptables-save-for-test",
    testonly = 1,
    srcs = ["fake-iptables-save-for-test.c"],
)

heyp_cc_binary(
    name = "fake-iptables-restore-for-test",
    testonly = 1,
    srcs = ["fake-iptables-restore-for-test.c"],
)

cc_test(
    name = "iptables-test",
    srcs = ["iptables-test.cc"],
    data = [
        ":fake-iptables-restore-for-test",
        ":fake-iptables-save-for-test",
    ],
    deps = [
        ":iptables",
        "//heyp/init:test-main",
    ],
)

heyp_cc_binary(
    name = "fake-tc-for-test",
    testonly = 1,
    srcs = ["fake-tc-for-test.c"],
)

cc_test(
    name = "tc-caller-test",
    srcs = ["tc-caller-test.cc"],
    data = [":fake-tc-for-test"],
    deps = [
        ":tc-caller",
        "//heyp/init:test-main",
    ],
)
